# hemingway-validator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/input/: simple.md
examples/output/: report.json  report.md
hemingway/: cli.py  parser.py  rules.py
specs/validator/: README.md
src/hemingway/: __main__.py  cli.py  report.py  rules.py  validator.py
tests/: test_cli.py  test_parser.py  test_rules.py  test_validator.py
